[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/enemy/TruckEnemy.gd" type="Script" id=1]
[ext_resource path="res://graphics/enemy/truck1.png" type="Texture" id=2]
[ext_resource path="res://graphics/enemy/truck2.png" type="Texture" id=3]
[ext_resource path="res://scenes/particles/explosion.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/enemy/LancaMisselEnemy.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/sound/PlayerHit.tscn" type="PackedScene" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "normal",
"speed": 5.0
} ]

[sub_resource type="Animation" id=2]
resource_name = "damage"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.780392, 0.184314, 0.184314, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "explode"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.937255, 0.337255, 0.337255, 1 ) ]
}

[node name="TruckEnemy" type="KinematicBody2D"]
script = ExtResource( 1 )
hp = 15
score = 50

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
rotation = -1.5708
frames = SubResource( 1 )
animation = "normal"
frame = 1
playing = true

[node name="Explosion" parent="AnimatedSprite" instance=ExtResource( 4 )]
position = Vector2( -10, -4.37114e-007 )
rotation = 1.5708
scale = Vector2( 1.2, 1.2 )

[node name="Explosion2" parent="AnimatedSprite" instance=ExtResource( 4 )]
position = Vector2( 13, 9.53674e-007 )
rotation = 1.5708
scale = Vector2( 1.2, 1.2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/damage = SubResource( 2 )
anims/explode = SubResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -0.233262, -1.91177 )
scale = Vector2( 1.29427, 2.551 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
rotation = -1.5708
polygon = PoolVector2Array( 26.8278, 7.77173, -22.8921, 9.06445, -23.8865, -3.96217, -16.0308, -5.95097, -15.0364, -12.7129, -7.28008, -13.0112, -6.0868, -6.84593, 26.0323, -7.93977 )

[node name="LancaMisselEnemy" parent="." instance=ExtResource( 5 )]
position = Vector2( -1, -8 )
rotation = -1.5708
hp = 18
score = 30
scrollDown = 0
shootInterval = 2.5

[node name="PlayerHit" parent="." instance=ExtResource( 6 )]

[node name="Timer" type="Timer" parent="."]

[connection signal="exploded" from="AnimatedSprite/Explosion" to="." method="_on_Explosion_exploded"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
